fix overflow intro triangle

--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -7,6 +7,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  overflow: hidden;
 
   @include medium-size {
     height: 518px;
