--- a/source/sass/blocks/toggle-button.scss
+++ b/source/sass/blocks/toggle-button.scss
@@ -2,7 +2,7 @@
   background-size: 23px 23px;
   border: none;
   background-color: transparent;
-  background-image: url("../../img/icon-burger.svg");
+  background-image: url("../img/icon-burger.svg");
   background-repeat: no-repeat;
   background-position: 50% 50%;
   cursor: pointer;
@@ -11,23 +11,23 @@
   transition: 0.3s;
 
   &:hover {
-    background-image: url("../../img/icon-burger-hoover.svg");
+    background-image: url("../img/icon-burger-hoover.svg");
   }
 
   &:active {
-    background-image: url("../../img/icon-burger-active.svg");
+    background-image: url("../img/icon-burger-active.svg");
   }
 }
 
 .toggle-button--active {
   background-size: 23px 23px;
-  background-image: url("../../img/icon-cross.svg");
+  background-image: url("../img/icon-cross.svg");
 
   &:hover {
-    background-image: url("../../img/icon-cross-hoover.svg");
+    background-image: url("../img/icon-cross-hoover.svg");
   }
 
   &:active {
-    background-image: url("../../img/icon-cross-active.svg");
+    background-image: url("../img/icon-cross-active.svg");
   }
 }
